--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 ansi_term = "0.12"
 async-std = "1.1.0"
 futures = "0.3.1"
+ring = "0.16.9"
 serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
 tui = "0.6.2"
