--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "0.12"
-async-std = "1.1.0"
+async-std = "1.2.0"
+base64 = "0.11.0"
 futures = "0.3.1"
 ring = "0.16.9"
-serde = { version = "1.0.102", features = ["derive"] }
-serde_json = "1.0.41"
-tui = "0.6.2"
+serde = { version = "1.0.103", features = ["derive"] }
+serde_json = "1.0.44"
+tui = "0.7.0"
