--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ authors = ["Davy Duperron <yamafaktory@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+aead = "0.2.0"
 ansi_term = "0.12"
-async-std = "1.2.0"
+async-std = "1.3.0"
 base64 = "0.11.0"
+chacha20poly1305 = "0.3.0"
 futures = "0.3.1"
 ring = "0.16.9"
-serde = { version = "1.0.103", features = ["derive"] }
+serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.44"
-tui = "0.7.0"
+tui = "0.8.0"
