--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ ansi_term = "0.12"
 async-std = "1.4.0"
 base64 = "0.11.0"
 chacha20poly1305 = "0.3.0"
+crossterm = "0.14.2"
 futures = "0.3.1"
 ring = "0.16.9"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.44"
 thiserror = "1.0.9"
-tui = "0.8.0"
