--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2018"
 
 [dependencies]
 aead = "0.2.0"
-async-std = "1.4.0"
 base64 = "0.11.0"
 chacha20poly1305 = "0.3.1"
-crossterm = "0.14.2"
+crossterm = "0.15.0"
 futures = "0.3.1"
-ring = "0.16.9"
+ring = "0.16.10"
 serde = { version = "1.0.104", features = ["derive"] }
-serde_json = "1.0.44"
-thiserror = "1.0.9"
+serde_json = "1.0.46"
+thiserror = "1.0.10"
+
+[dependencies.async-std]
+version = "1.4.0"
+features = ["unstable"]
