--- a/src/rustfmt.toml
+++ b/src/rustfmt.toml
@@ -2,7 +2,7 @@ edition = "2018"
 fn_single_line = true
 format_strings = true
 imports_indent = "Block"
-max_width = 80
+# max_width = 80
 merge_imports = true
 use_try_shorthand = true
 wrap_comments = true
