--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,13 @@ version = "0.1.0"
 aead = "0.2.0"
 base64 = "0.12.0"
 chacha20poly1305 = "0.4.1"
-crossterm = "0.16.0"
+crossterm = "0.17.1"
 futures = "0.3.4"
+lazy_static = "1.4.0"
 ring = "0.16.11"
 serde = { version = "1.0.105", features = ["derive"] }
-serde_json = "1.0.48"
-thiserror = "1.0.12"
+serde_json = "1.0.50"
+thiserror = "1.0.13"
 
 [dependencies.async-std]
 version = "1.5.0"
