--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Davy Duperron <yamafaktory@gmail.com>"]
 categories = ["command-line-utilities"]
-description = "Yume - An encrypted peer-to-peer UDP messaging terminal client"
+description = "yume - An encrypted peer-to-peer IPv6 UDP messaging terminal client"
 edition = "2018"
 exclude = ["docker-compose.yml", "registry", "rustfmt.toml"]
 keywords = ["cli", "crypto", "network", "cryptography", "terminal", "networking", "encryption", "chat", "p2p", "messaging", "udp"]
@@ -17,17 +17,17 @@ version = "0.1.0"
 aead = "0.2.0"
 base64 = "0.12.0"
 chacha20poly1305 = "0.4.1"
-crossterm = "0.17.1"
+crossterm = "0.17.3"
 futures = "0.3.4"
 lazy_static = "1.4.0"
-ring = "0.16.11"
-serde = { version = "1.0.105", features = ["derive"] }
-serde_json = "1.0.50"
-thiserror = "1.0.13"
+ring = "0.16.12"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.51"
+thiserror = "1.0.15"
 
 [dependencies.async-std]
 version = "1.5.0"
-features = ["unstable"]
+features = ["attributes", "unstable"]
 
 [profile.release]
 codegen-units = 1
