chore: shorten keywords list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["command-line-utilities"]
 description = "yume - An encrypted peer-to-peer IPv6 UDP messaging terminal client"
 edition = "2018"
 exclude = ["docker-compose.yml", "registry", "rustfmt.toml"]
-keywords = ["cli", "crypto", "network", "cryptography", "terminal", "networking", "encryption", "chat", "p2p", "messaging", "udp"]
+keywords = ["cli", "crypto", "networking", "chat", "p2p"]
 license = "MIT"
 name = "yume"
 repository = "https://github.com/yamafaktory/yume"
