--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,16 @@ version = "0.1.0"
 
 [dependencies]
 aead = "0.2.0"
-base64 = "0.12.0"
+base64 = "0.12.1"
 chacha20poly1305 = "0.4.1"
-crossterm = "0.17.3"
+crossterm = "0.17.4"
 futures = "0.3.4"
 lazy_static = "1.4.0"
-ring = "0.16.12"
+ring = "0.16.13"
 serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.51"
-thiserror = "1.0.15"
+serde_json = "1.0.52"
+structopt = "0.3"
+thiserror = "1.0.16"
 
 [dependencies.async-std]
 version = "1.5.0"
